--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.4",
+    "axios": "^1.4.0",
+    "http-proxy-middleware": "^2.0.6",
     "mdb-react-ui-kit": "^6.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
